--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,3 +1,12 @@
+html, body {
+    height: 100%;
+}
+
+#content {
+    min-height: 75%;
+}
+
+
 /* Navbar
 ************************************/
 section#registers {
